test/fail/asyncret3.mo
shared func call4(f : shared () -> future Int) : future Int = f();
